2007-08-22  Derek Price  <derek@ximbiot.com>

	* add.c (add): Check last component of argument paths instead of the
	entire argument.
	(add_directory): Change error messages to assertions since the check
	in add() should prevent the problems.
	* sanity.sh (add-restricted): Test indirect paths to `CVS' dir with
	add.

	* cvs.h, server.c: Remove references to obsolete headers.
	* subr.c: Ditto.  Include <sys/time.h>.
	(format_cmdline): Assume long double type as per GNULIB.
	(Xreadlink): s/xreadlink/mreadlink_with_size).
	* import.c (import), ls.c (ls): s/strstr/mbsstr/.

2007-08-21  Derek Price  <derek@ximbiot.com>

	* main.c (main): Improve version string with standard GNU GPL notice.
	Update copyright year.
	* version.c (version): Use new PACKAGE_CONFIG string defined by
	configure.
	* sanity.sh (version-1): Update to account for new version string.

2007-06-18  Derek Price  <derek@ximbiot.com>

	* client.c (send_repository): Don't attempt to send metadata from CVS
	subdirectories when importing.

2007-06-15  Derek Price  <derek@ximbiot.com>

	* import.c (import): Check more carefully for files and directories
	named "CVS".
	* sanity.sh (import-1b): New test for same.
	(import-2): Test files named "CVS", in addition to directories.

2007-06-13  Mark D. Baushke  <mdb@gnu.org>

	* parseinfo.c (free_config): Avoid double free of
	config->PrimaryServer and config.
	Avoid double free of 'config' using a gross hack.

	* sanity.sh: Correct the GPG installation warning if --valgrind is
	in use.

2007-06-12  Mark D. Baushke  <mdb@gnu.org>

	[bug #17083]
	* gssapi-client.c (connect_to_gserver): send GSSAPI-U(ser)
	auth string and user name if gserver:user@host is used.

	* server.c (pserver_authenticate_connection): handle
	GSSAPI-U(ser) auth string, looking in that account's .k5login
	for allowed principals.
	(gserver_authenticate_connection): Add a username argument.
	(patch adapted from Marc W. Mengel <mengel@fnal.gov>)

2007-06-11  Derek Price  <derek@ximbiot.com>
